--- a/.pipelines/build-and-publish-package.yaml
+++ b/.pipelines/build-and-publish-package.yaml
@@ -42,3 +42,35 @@ stages:
             inputs:
               artifactName: 'NuGet'
               targetPath: '$(Build.ArtifactStagingDirectory)'
+  
+  - stage: PublishToArtifactFeed
+    displayName: Publish to Artifact Feed
+    dependsOn: Build
+    jobs:
+      - job: PublishToArtifactFeed
+        displayName: Publish to Artifact Feed
+        pool:
+          vmImage: 'ubuntu-latest'
+        steps:
+          - task: DownloadPipelineArtifact@2
+            displayName: 'Download NuGet Package'
+            inputs:
+              artifact: 'NuGet'
+              path: '$(Build.ArtifactStagingDirectory)'
+          
+          - task: NuGetAuthenticate@0
+            displayName: 'Authenticate to NuGet Feed'
+            inputs:
+              nuGetServiceConnections: 'NuGet Feed'
+          
+          - task: NuGetCommand@2
+            displayName: 'NuGet push'
+            inputs:
+              command: push
+              packagesToPush: '$(Pipeline.Workspace)/NuGet/*.nupkg'
+              publishVstsFeed: 'NuGet Feed'
+              nuGetFeedType: 'internal'
+              publishVstsFeedAccessType: 'private'
+              verbosityRestore: 'Detailed'
+              verbosityPack: 'Detailed'
+              verbosityPush: 'Detailed'
